--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,26 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^14.2.0",
-    "react": "^18.3.0",
-    "react-dom": "^18.3.0",
-    "next-auth": "^4.24.5",
-    "@react-google-maps/api": "^2.19.3",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
-    "zod": "^3.22.4",
+    "@hookform/resolvers": "^3.3.4",
+    "@react-google-maps/api": "^2.19.3",
+    "bootstrap": "^5.3.8",
+    "next": "^14.2.0",
+    "next-auth": "^4.24.5",
+    "react": "^18.3.0",
+    "react-bootstrap": "^2.10.10",
+    "react-dom": "^18.3.0",
     "react-hook-form": "^7.51.0",
-    "@hookform/resolvers": "^3.3.4"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "typescript": "^5.3.0",
     "eslint": "^8.56.0",
-    "eslint-config-next": "^14.2.0"
+    "eslint-config-next": "^14.2.0",
+    "typescript": "^5.3.0"
   }
 }
-
-
